--- a/client/containers/BannerContainer/index.css
+++ b/client/containers/BannerContainer/index.css
@@ -1,41 +1,21 @@
 .bannerContainer{
     position: relative;
-    /*height: 392px;*/
-    /*display: flex;*/
-    /*flex-direction: row;*/
-    /*flex-wrap: nowrap;*/
-    /*align-items:center;*/
-    /*overflow-x: scroll;*/
-    /*-webkit-overflow-scrolling:touch;*/
+    height: 392px;
+    width: 100%;
+    padding-left: 20px;
 }
-.banners{
+.bannerContainer .banners{
     display: inline-block;
     width: 392px;
-    margin-right: 20px;
-}
-
-.swiper-container {
-    width: 100%;
+    /*margin-right: 20px;*/
     height: 100%;
 }
-.swiper-slide {
-    /*text-align: center;*/
-    /*font-size: 18px;*/
-    /*background: #f00;*/
-    /*color: #fff;*/
-    /*!* Center slide text vertically *!*/
-    /*display: -webkit-box;*/
-    /*display: -ms-flexbox;*/
-    /*display: -webkit-flex;*/
-    /*display: flex;*/
-    /*-webkit-box-pack: center;*/
-    /*-ms-flex-pack: center;*/
-    /*-webkit-justify-content: center;*/
-    /*justify-content: center;*/
-    /*-webkit-box-align: center;*/
-    /*-ms-flex-align: center;*/
-    /*-webkit-align-items: center;*/
-    /*align-items: center;*/
-    /*width: auto;*/
-    /*height: auto;*/
+.bannerContainer .banners.banners2{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+}
+.bannerContainer .swiper-container {
+    width: 100%;
+    height: 100%;
 }
