--- a/client/containers/ActivityContainer/index.css
+++ b/client/containers/ActivityContainer/index.css
@@ -1,4 +1,10 @@
 .activityContainer{
     position: relative;
-    height: 100px;
+    height: 140px;
+    padding: 20px 0 20px 20px;
+}
+.activityContainer .activityContent{
+    height: 100%;
+    width: 100%;
+    background: #666;
 }
