--- a/client/css/color.css
+++ b/client/css/color.css
@@ -9,3 +9,9 @@
 .colff7860{
     color: #ff7860!important;
 }
+.col666{
+    color: #666666!important;
+}
+.colfff{
+    color: #ffffff!important;
+}
