--- a/client/index.css
+++ b/client/index.css
@@ -3,3 +3,4 @@
 @import url('./css/font.css');
 @import url('./css/color.css');
 @import url('./css/common.css');
+@import url('./css/iconfont.css');
